--- a/client-extensions/m9a28-email-etc-spring-boot/src/main/resources/application-default.properties
+++ b/client-extensions/m9a28-email-etc-spring-boot/src/main/resources/application-default.properties
@@ -15,9 +15,9 @@ com.liferay.lxc.dxp.domains=localhost:8080
 com.liferay.lxc.dxp.mainDomain=localhost:8080
 com.liferay.lxc.dxp.server.protocol=http
 #
-# Email server
+# Email Server
 #
-#FOR GMAIL
+#GMAIL
 com.liferay.email.host=imap.gmail.com
 #uncomment the line below for yahoo
 #com.liferay.email.host=imap.mail.yahoo.com
